--- a/templates/book.html
+++ b/templates/book.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %} {% block content %}
 <div class="columns">
-  <div class="column is-one-third">
+  <div class="column is-one-quarter">
 		<figure class="image is-fullwidth">
 			<img class="lazy" data-src="{% if book.cover %}{{ book.cover }}{% else %}https://via.placeholder.com/300x400?text=Cover{% endif %}" alt="Book cover">
 		</figure>
