--- a/templates/forms/update-book.html
+++ b/templates/forms/update-book.html
@@ -120,7 +120,7 @@ content %}
     <div class="field-body">
       <div class="field">
         <div class="control">
-          {{ form.submit(class="button") }}
+          {{ form.submit(class="button is-warning is-inverted") }}
         </div>
       </div>
     </div>
