--- a/templates/forms/add-book.html
+++ b/templates/forms/add-book.html
@@ -119,7 +119,7 @@
     <div class="field-body">
       <div class="field">
         <div class="control">
-          {{ form.submit(class="button") }}
+          {{ form.submit(class="button is-warning is-inverted") }}
         </div>
       </div>
     </div>
