--- a/templates/levels.html
+++ b/templates/levels.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} {% block title %}Reading Levels & Wordcounts{% endblock %} {% block content %}
+{% extends 'base.html' %} {% block content %}
 <div class="row">
 	<div class="offset-by-one-third one-third column">
 		<table class="u-full-width">
