--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,100 +1,54 @@
-body { background-color: #fffdd0; }
-.header { margin: 2% 0; }
-h1, h2, h3 { text-align: center; margin-bottom: 4rem; font-weight: bold; }
+body { font-size: 1.8rem; }
+.header {
+  text-align: center;
+  padding: 2rem;
+  margin-bottom: 4rem;
+  background-color: #33C3F0;
+  color: #FFF;
+}
+.header p {
+  margin-top: 0;
+  margin-bottom: 2rem;
+  font-size: 1.8rem;
+  line-height: 1.5;
+  letter-spacing: -.05rem;
+}
+.header hr { margin-top: 1rem; margin-bottom: 1.5rem; }
 
-a { color: #00008b; }
-a:hover { color: #0000cd; }
-  
-.content { clear: both; }
+img { width: 100%; height: 100%; border-radius: 10px; }
+img.blur {
+  filter: blur(8px);
+  transition: 0.5s ease-in-out;
+}
+img.blur:hover {
+  filter: blur(0);
+  transition: 0.5s ease-in-out;
+}
 
-img { border-radius: 10px; }
-
-tr:first-child, tr:not(:last-child) { border-bottom: 1px solid #222; }
-th, td {
-	background-color: #fdfd96;
-  border-bottom: none;
-	padding: 12px 15px; }
-th:first-child, td:first-child { padding-left: 1rem; }
-th:last-child, td:last-child { padding-right: 1rem; }
-th:first-of-type { border-top-left-radius: 10px; }
-th:last-of-type { border-top-right-radius: 10px; }
-tr:last-of-type td:first-of-type { border-bottom-left-radius: 10px; }
-tr:last-of-type td:last-of-type { border-bottom-right-radius: 10px; }
-
-th {
-	border-top: none;
-	text-align: center;
-	text-transform: uppercase; }
 td a { font-weight: 600; text-decoration: none; }
+
 .users tr td { text-align: center; }
 .list td:last-child { text-align: right; }
 
-i { padding: 2px; }
-.button i { font-size: 1.25em }
-
 form textarea { height: 236px; }
 
-.button,
-button,
-input[type="submit"],
-input[type="reset"],
-input[type="button"] {
-  color: #222;
-  background-color: #fdfd96;
-  border-color: #222;}
-input[type="email"],
-input[type="number"],
-input[type="search"],
-input[type="text"],
-input[type="tel"],
-input[type="url"],
-input[type="password"],
-textarea,
-select {
-  background-color: #fdfd96;
-  border-color: #222; }
-
-.navbar, .btn-group { margin: 0 auto; text-align: center; }
-.btn-group {
-	position: fixed;
-	left: 50%;
-	bottom: 0;
-	transform: translate(-50%, -50%); }
-.navbar .button, .btn-group .button {
-	padding: 0 15px;
-	float: left;
-  border-radius: 0; }
-.navbar .button { padding-left: 10px;}
-.navbar .button:not(:last-child), .btn-group .button:not(:last-child) { border-right: none; }
-.navbar .button:first-child, .btn-group .button:first-child {
-	border-top-left-radius: 15px;
-	border-bottom-left-radius: 15px; }
-.navbar .button:last-child, .btn-group .button:last-child {
-	border-top-right-radius: 15px;
-	border-bottom-right-radius: 15px; }
-.navbar:after, .btn-group:after {
-  content: "";
-  clear: both;
-  display: table; }
-
-.alert, .meta, .footer {
+.alert {
 	margin-bottom: 2rem;
   padding: 25px 15px;
-  background-color: #fdfd96;
+  background-color: #33C3F0;
+  color: #FFF;
   font-weight: 600;
-  border-radius: 15px;
-  border: 1px solid; }
-.alert { text-align: center; }
-.footer { margin-top: 6rem; }
-
-hr { border-color: #222; }
-
-@media (min-width: 0px) {
-  p, li { font-size: 1rem; }
+  border-radius: 5px;
+  text-align: center;
 }
-@media (min-width: 320px) {
-  p, li { font-size: calc(0.7rem + 1vw); }
+.footer {
+  margin-top: 6rem;
+  padding: 25px 15px;
+  background-color: #33C3F0;
+  color: #FFF;
+  text-align: center;
 }
-@media (min-width: 1001px){
-	.navbar .button { padding-left: 15px;}
+
+@media (min-width: 550px) {
+  .header p { font-size: 2.4rem; }
 }
