--- a/templates/404.html
+++ b/templates/404.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}{% block title %}Error 404!{% endblock %}{% block content %}
+{% extends 'base.html' %} {% block content %}
 <div class="row" style="text-align: center;">
 	<div class="one-half column" style="margin-top:5%;">
 		<i class="fa-solid fa-link-slash fa-10x"></i>
