--- a/templates/forms/add-astp.html
+++ b/templates/forms/add-astp.html
@@ -1,22 +1,24 @@
-{% extends 'base.html' %} {% block title %}{{ title }}{% endblock %} {% block content %}
+{% extends 'base.html' %} {% block content %}
 <form METHOD="POST">
-	{{ form.hidden_tag() }}
+  {{ form.hidden_tag() }}
   <div class="row">
     <div class="four columns">
       {{ form.name.label }}
       {{ form.name(class="u-full-width") }}
     </div>
-    {% if series %}<div class="four columns">
+    {% if 'series' in request.url %}
+    <div class="four columns">
       {{ form.name_sort.label }}
       {{ form.name_sort(class="u-full-width") }}
-    </div>{% endif %}
+    </div>
+    {% endif %}
     <div class="four columns">
-    	{{ form.level.label }}
+      {{ form.level.label }}
       {{ form.level(class="u-full-width") }}
     </div>
   </div>
   <div style="text-align:center;">
-		{{ form.submit }}
+    {{ form.submit(class="button-primary") }}
   </div>
 </form>
 {% endblock %}
