--- a/templates/forms/add-book.html
+++ b/templates/forms/add-book.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}{% block title %}Add Book{% endblock %} {% block content %}
+{% extends 'base.html' %} {% block content %}
 <form METHOD="POST" action="{{ url_for('add_book') }}">
 	{{ form.hidden_tag() }}
   <div class="row">
@@ -50,7 +50,7 @@
   {{ form.description.label }}
   {{ form.description(class="u-full-width") }}
   <div style="text-align:center;">
-		{{ form.submit }}
+		{{ form.submit(class="button-primary") }}
   </div>
 </form>
 {% endblock %}
