--- a/templates/forms/add-user.html
+++ b/templates/forms/add-user.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}{% block title %}Add User{% endblock %}{% block content %}
+{% extends 'base.html' %} {% block content %}
 <form METHOD="POST" action="{{ url_for('add_user') }}">
 	{{ form.hidden_tag() }}
   <div class="row">
@@ -26,7 +26,7 @@
     </div>
   </div>
   <div style="text-align:center;">
-    {{ form.submit }}
+    {{ form.submit(class="button-primary") }}
   </div>
 </form>
 {% endblock %}
