--- a/templates/home.html
+++ b/templates/home.html
@@ -1,31 +1,62 @@
-{% extends 'base.html' %}{% block title %}👋 Welcome {{ current_user.name }}! 🥳{% endblock %} {% block content %}
-<h3>Recently Added</h3>
-<table class="u-full-width list">
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Tags</th>
-    </tr>
-  </thead>
-  <tbody>
-    {% for book in books %}
-    <tr>
-      <td>
-      	<a href="{{ url_for('book', id=book.id) }}">
-      		<i class='fa-solid fa-book'></i>
-		    	{{ book.title }} {% if book.series.name != "<None>" %}({{ book.series.name }} #{{ book.series_index }}){% endif %} by {{ book.author.name }}
-		  	</a>
-      </td>
-      <td>
-      	{% for tag in book.tags|sort(attribute='name') %}
-		  	<a href="{{ url_for('tag', id=tag.id) }}">
-		  		<i class="fa-solid fa-tag"></i>
-		  		{{ tag.name }}
-		  	</a>
-		  	{% endfor %}
-      </td>
-    </tr>
-    {% endfor %}
-  </tbody>
-</table>
+{% extends 'base.html' %} {% block content %}
+<h2 style="text-align: center;">Recently Added (12)</h2>
+{% for book in books %}
+<hr>
+<div class="row">
+  <div class="one-third column">
+    <img src="{% if book.cover %}{{ book.cover }}{% else %}https://via.placeholder.com/300x400?text=Cover{% endif %}" alt="cover"{% if book.level == 4 %} class="blur"{% endif %}>
+  </div>
+  <div class="one-third column" style="text-align: center;">
+    <h3>{{ book.title }}</h3>
+    <p>
+      <i class="fa-solid fa-user"></i>
+      <a href="{{ url_for('author', id=book.author.id) }}">
+        View more by {{ book.author.name }}
+      </a>
+    </p>
+    {% if book.series.name != '<None>' %}
+    <p>
+      <i class="fa-solid fa-list-ol"></i>
+      <a href="{{ url_for('serie', id=book.series.id) }}">
+        {{ book.series.name }}{% if book.series.name != '<None>' %} #{{ book.series_index }}{% endif %}
+      </a>
+    </p>
+    {% endif %}
+    <p>
+      {% for tag in book.tags|sort(attribute='name') %}
+      <i class="fa-solid fa-tag"></i>
+      <a href="{{ url_for('tag', id=tag.id) }}">
+        {{ tag.name }}
+      </a>
+      {% endfor %}
+    </p>
+    <p>
+      <i class="fa-solid fa-star"></i>
+      <a href="{{ url_for('levels') }}{{ book.level }}">
+        {{ book.level }}
+      </a>
+    </p>
+    <p>
+      <a href="{% if book.wordcount <= 3500 %}{{ url_for('flash_fiction') }}{% elif book.wordcount <= 7500  %}{{ url_for('short_stories') }}{% elif book.wordcount <= 17000 %}{{ url_for('novellettes') }}{% elif book.wordcount <= 40000 %}{{ url_for('novellas') }}{% else %}{{ url_for('novels') }}{% endif %}">
+        {{ book.wordcount }} words ({% if book.wordcount <= 3500 %}flash fiction{% elif book.wordcount <= 7500  %}short story{% elif book.wordcount <= 17000 %}novellette{% elif book.wordcount <= 40000 %}novella{% else %}novel{% endif %})
+      </a>
+    </p>
+    <p>
+      <i class="fa-solid fa-fingerprint"></i>
+      {{ book.isbn }}
+    </p>
+    <p>
+      <i class="fa-solid fa-building"></i>
+      <a href="{{ url_for('publisher', id=book.publisher.id) }}">
+        {{ book.publisher.name }}
+      </a>
+    </p>
+  </div>
+  <div class="one-third column">
+    {% markdown %}{{ book.description | truncate(400) }}{% endmarkdown %}
+    <p style="text-align: right;"><a href="{{ url_for('book', id=book.id) }}">Read More</a></p>
+  </div>
+</div>
+{% endfor %}
+<hr>
 {% endblock %}
