--- a/templates/list.html
+++ b/templates/list.html
@@ -1,57 +1,63 @@
-{% extends 'base.html' %} {% block title %}{% if astp %}{{ astp.name }}{% else %}{{ title }}{% endif %}{% if count %} ({{ count }}){% endif %}{% endblock %} {% block content %}
-{% if current_user.id == 1 %}
-<div role="group" class="btn-group">
-	<a href="{% if title == 'Books' %}{{ url_for('add_book') }}{% elif author %}{{ url_for('add_author') }}{% elif series %}{{ url_for('add_series') }}{% elif tag %}{{ url_for('add_tag') }}{% elif publisher %}{{ url_for('add_publisher') }}{% endif %}" class="button">
-		<i class="fa-solid fa-plus"></i>
-	</a>
-	{% if title != 'Books' %}
-	<a href="{% if author %}{{ url_for('update_author', id=astp.id) }}{% elif series %}{{ url_for('update_series', id=astp.id) }}{% elif tag %}{{ url_for('update_tag', id=astp.id) }}{% elif publisher %}{{ url_for('update_publisher', id=astp.id) }}{% endif %}" class="button">
-		<i class="fa-solid fa-pencil"></i>
-	</a>
-	<a href="{% if author %}{{ url_for('delete_author', id=astp.id) }}{% elif series %}{{ url_for('delete_series', id=astp.id) }}{% elif tag %}{{ url_for('delete_tag', id=astp.id) }}{% elif publisher %}{{ url_for('delete_publisher', id=astp.id) }}{% endif %}" class="button">
-		<i class="fa-solid fa-trash"></i>
-	</a>
-	{% endif %}
+{% extends 'base.html' %} {% block content %}
+{% for book in books.items %}
+<hr>
+<div class="row">
+  <div class="one-third column">
+    <img src="{% if book.cover %}{{ book.cover }}{% else %}https://via.placeholder.com/300x400?text=Cover{% endif %}" alt="cover"{% if book.level == 4 %} class="blur"{% endif %}>
+  </div>
+  <div class="one-third column" style="text-align: center;">
+    <h3>{{ book.title }}</h3>
+		<p>
+			<i class="fa-solid fa-user"></i>
+			<a href="{{ url_for('author', id=book.author.id) }}">
+				View more by {{ book.author.name }}
+			</a>
+		</p>
+		{% if book.series.name != '<None>' %}
+		<p>
+			<i class="fa-solid fa-list-ol"></i>
+			<a href="{{ url_for('serie', id=book.series.id) }}">
+				{{ book.series.name }}{% if book.series.name != '<None>' %} #{{ book.series_index }}{% endif %}
+			</a>
+		</p>
+		{% endif %}
+		<p>
+			{% for tag in book.tags|sort(attribute='name') %}
+			<i class="fa-solid fa-tag"></i>
+			<a href="{{ url_for('tag', id=tag.id) }}">
+				{{ tag.name }}
+			</a>
+			{% endfor %}
+		</p>
+		<p>
+			<i class="fa-solid fa-star"></i>
+			<a href="{{ url_for('levels') }}{{ book.level }}">
+				{{ book.level }}
+			</a>
+		</p>
+		<p>
+			<a href="{% if book.wordcount <= 3500 %}{{ url_for('flash_fiction') }}{% elif book.wordcount <= 7500  %}{{ url_for('short_stories') }}{% elif book.wordcount <= 17000 %}{{ url_for('novellettes') }}{% elif book.wordcount <= 40000 %}{{ url_for('novellas') }}{% else %}{{ url_for('novels') }}{% endif %}">
+				{{ book.wordcount }} words ({% if book.wordcount <= 3500 %}flash fiction{% elif book.wordcount <= 7500  %}short story{% elif book.wordcount <= 17000 %}novellette{% elif book.wordcount <= 40000 %}novella{% else %}novel{% endif %})
+			</a>
+		</p>
+		<p>
+			<i class="fa-solid fa-fingerprint"></i>
+			{{ book.isbn }}
+		</p>
+		<p>
+			<i class="fa-solid fa-building"></i>
+			<a href="{{ url_for('publisher', id=book.publisher.id) }}">
+				{{ book.publisher.name }}
+			</a>
+		</p>
+  </div>
+  <div class="one-third column">
+    {% markdown %}{{ book.description | truncate(400) }}{% endmarkdown %}
+		<p style="text-align: right;"><a href="{{ url_for('book', id=book.id) }}">Read More</a></p>
+  </div>
 </div>
-{% endif %}
-<table class="u-full-width list">
-	<thead>
-		<tr>
-			{% if series and astp.name != '<None>' %}<th>#</th>{% endif %}
-			<th>Title</th>
-			<th>Tags</th>
-			{% if min or max %}<th>Words</th>{% endif %}
-		</tr>
-	</thead>
-  <tbody>
-  	{% for book in books.items %}
-		<tr>
-			{% if series and astp.name != '<None>' %}<td style='text-align: center;'>{{ book.series_index }}</td>{% endif %}
-		  <td>
-		    <a href="{{ url_for('book', id=book.id) }}">
-		    	<i class='fa-solid fa-book'></i>
-		    	{{ book.title }} {% if not series and book.series.name != '<None>' %}({{ book.series.name }} #{{ book.series_index }}){% endif %} by {{ book.author.name }}
-		  	</a>
-		  </td>
-		  <td>
-		  	{% for tag in book.tags|sort(attribute='name') %}
-		  	<a href="{{ url_for('tag', id=tag.id) }}">
-		  		<i class="fa-solid fa-tag"></i>
-		  		{{ tag.name }}
-		  	</a>
-		  	{% endfor %}
-		  </td>
-		  {% if min or max %}
-		  <td>
-		  	<i class="fa-solid fa-hashtag"></i>
-		  	{{ book.wordcount }}
-		  </td>
-		  {% endif %}
-		</tr>
-		{% endfor %}
-		
-  </tbody>
-</table>
+{% endfor %}
+<hr>
 <!-- Pagination Links-->
 <div class="row">
 	<div class="six columns">
@@ -59,11 +65,11 @@
 	</div>
 	<div class="six columns" style="text-align:right;">
 		{% if books.has_prev %}
-	  <a href="{{ url_for('books', page=books.prev_num) }}" class="button">
+	  <a href="{{ url_for('books', page=books.prev_num) }}" class="button button-primary">
 			<i class="fa-solid fa-angles-left"></i>
 	  </a>
 	  {% endif %}{% if books.has_next %}
-	  <a href="{{ url_for('books', page=books.next_num) }}" class="button">
+	  <a href="{{ url_for('books', page=books.next_num) }}" class="button button-primary">
 	  	<i class="fa-solid fa-angles-right"></i>
 	  </a>
 	  {% endif %}
