--- a/templates/tag.html
+++ b/templates/tag.html
@@ -1,14 +1,4 @@
-{% extends 'base.html' %} {% block title %}{{ tag.name }}{% endblock %} {% block content %}
-{% if current_user.id == 1 %}
-<div style="margin-bottom: 4rem; text-align: center;">
-	<a href="{{ url_for('update_tag', id=tag.id) }}" class="button">
-		<i class="fa-solid fa-pencil"></i>
-	</a>
-	<a href="{{ url_for('delete_tag', id=tag.id) }}" class="button">
-		<i class="fa-solid fa-trash"></i>
-	</a>
-</div>
-{% endif %}
+{% extends 'base.html' %} {% block content %}
 <table class="u-full-width">
 	<thead>
 		<tr>
