--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -2,20 +2,35 @@
 <form action="/books" method="GET">
   <div>
     <label>Name</label>
-    <input type="text" name="title" value="<%= searchOptions.title %>"/>
+    <input type="text" name="title" value="<%= searchOptions.title %>" />
   </div>
   <div>
     <label>Published After</label>
-    <input type="date" name="publishedAfter" value="<%= searchOptions.publishedAfter %>"/>
+    <input
+      type="date"
+      name="publishedAfter"
+      value="<%= searchOptions.publishedAfter %>"
+    />
   </div>
   <div>
     <label>Published Before</label>
-    <input type="text" name="publishedBefore" value="<%= searchOptions.publishedBefore %>"/>
+    <input
+      type="text"
+      name="publishedBefore"
+      value="<%= searchOptions.publishedBefore %>"
+    />
   </div>
   <button type="submit">Search</button>
 </form>
 <div>
   <% books.forEach(book => { %>
-    <img height="150" width="100" src="<%= book.coverImagePath %>" alt="">
+  <a href="/books/<%= book.id %>">
+    <img
+      height="150"
+      width="100"
+      src="<%= book.coverImagePath %>"
+      alt="cover"
+    />
+  </a>
   <% }) %>
 </div>
