--- a/views/authors/edit.ejs
+++ b/views/authors/edit.ejs
@@ -2,6 +2,6 @@
 
 <form action="/authors/<%= author.id %>?_method=PUT" method="POST">
   <%- include('_form.ejs') %>
-  <a href="/authors/<%= author.id %>">Cancel</a>
+  <a class="button" href="/authors/<%= author.id %>">Cancel</a>
   <button type="submit">Update</button>
 </form>
