--- a/views/authors/new.ejs
+++ b/views/authors/new.ejs
@@ -2,6 +2,6 @@
 
 <form action="/authors" method="POST">
   <%- include('_form.ejs') %>
-  <a href="/authors">Cancel</a>
+  <a class="button" href="/authors">Cancel</a>
   <button type="submit">Create</button>
 </form>
