--- a/views/authors/show.ejs
+++ b/views/authors/show.ejs
@@ -1,10 +1,23 @@
 <h2><%= author.name %></h2>
-<a href="/authors/<%= author.id %>/edit">Edit</a>
-<%- include('../partials/deleteForm', { url: `/authors/${author.id}` }) %> <% if
-(booksByAuthor.length > 0) { %>
-<h2>Books by Author</h2>
+
+<div class="row">
+  <div class="offset-by-eight two columns">
+    <a class="button" href="/authors/<%= author.id %>/edit">
+      <i class="fa-solid fa-pen fa-lg"></i>
+    </a>
+  </div>
+  <div class="two columns">
+    <%- include('../partials/deleteForm', { url: `/authors/${author.id}` }) %> 
+  </div>
+</div>
+<% if (booksByAuthor.length > 0) { %>
+<h3>Books by Author</h3>
 <% booksByAuthor.forEach(book => { %>
-<a href="/books/<%= book.id %>">
-  <img height="150" width="100" src="<%= book.coverImagePath %>" alt="cover" />
+<a class="cover" href="/books/<%= book.id %>">
+  <img
+    src="<%= book.coverImagePath %>" 
+    alt="cover"
+    <% if (book.accessLevel == 4) { %>class="blur"<% } %>
+  />
 </a>
 <% }) %> <% } %>
