--- a/views/books/show.ejs
+++ b/views/books/show.ejs
@@ -1,11 +1,69 @@
 <h2><%= book.title %></h2>
 
-<img width="100" height="150" src="<%= book.coverImagePath %>" alt="cover" />
-<div>Author: <%= book.author.name %></div>
-<div>Publish Date: <%= book.publishDate.toDateString() %></div>
-<div>Word Count: <%= book.wordCount %></div>
-<div>Description: <%= book.description %></div>
+<div class="row">
+  <div class="one-half column">
+    <img
+      class="u-max-full-width <% if (book.accessLevel == 4) { %>blur<% } %>"
+      src="<%= book.coverImagePath %>"
+      alt="cover"
+    />
+    <div class="row">
+      <div class="one-half column">
+        <a class="button" href="/books/<%= book.id %>/edit">
+          <i class="fa-solid fa-pen fa-lg"></i>
+        </a>
+      </div>
+      <div class="one-half column">
+        <%- include('../partials/deleteForm', { url: `/books/${book.id}` }) %>
+      </div>
+    </div>
+  </div>
+  <div class="one-half column">
+    <p>
+      <i class="fa-solid fa-user"></i>
+      <a href="/authors/<%= book.author.id %>">
+        <%= book.author.name %>
+      </a>
+    </p>
+    <p>
+      <i class="fa-solid fa-calendar"></i>
+      <%= book.publishDate.toDateString() %>
+    </p>
+    <p>
+      <i class="fa-solid fa-arrow-down-1-9"></i>
+      <%= book.wordCount %> words
+    </p>
+    <p>Access Level: <%= book.accessLevel %></p>
+  </div>
+</div>
 
-<a href="/books/<%= book.id %>/edit">Edit</a>
-<%- include('../partials/deleteForm', { url: `/books/${book.id}` }) %>
-<a href="/authors/<%= book.author.id %>">View Author</a>
+<p><%= book.description %></p>
+
+<p class="alert">
+  To download this e-book, you will need an e-book reading app for your device. Popular ones include FBReader, Moon+ Reader, and iBooks.
+</p>
+
+<p class="alert">
+  Sorry, visitors can't download books.
+</p>
+
+<table class="u-full-width">
+  <thead>
+    <tr>
+      <th>Format</th>
+      <th>Description</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>
+        <a href="https://aspiring-writer.gitlab.io/books/<%= book.accessLevel %>/<%= book.author.name %>/<%= book.title %>.epub">
+          EPUB
+        </a>
+      </td>
+      <td>
+        Supported by most e-readers, smartphones, tablets, and computers.
+      </td>
+    </tr>
+  </tbody>
+</table>
