--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -1,9 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Basic -->
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Readerporium</title>
+
+    <!-- Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;600&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="/css/normalize.css" />
+    <link rel="stylesheet" href="/css/skeleton.css" />
+    <link rel="stylesheet" href="/css/custom.css" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/favicon.ico" />
+
+    <!-- Font Awesome -->
+    <link href="/fontawesome/css/all.min.css" rel="stylesheet" />
+
+    <!-- FilePond -->
     <link
       href="https://unpkg.com/filepond@^4/dist/filepond.css"
       rel="stylesheet"
@@ -26,10 +49,13 @@
     ></script>
     <script defer src="https://unpkg.com/filepond@^4/dist/filepond.js"></script>
     <script defer src="/js/fileUpload.js"></script>
-    <title>Readerporium</title>
   </head>
   <body>
-    <%- include('../partials/header.ejs') %> <%-
-    include('../partials/errorMessage.ejs') %> <%- body %>
+    <div class="container">
+      <%- include('../partials/header.ejs') %>
+      <%- include('../partials/errorMessage.ejs') %>
+      <%- body %>
+      <%- include('../partials/footer') %>
+    </div>
   </body>
 </html>
