--- a/views/partials/deleteForm.ejs
+++ b/views/partials/deleteForm.ejs
@@ -1,3 +1,5 @@
 <form method="POST" action="<%= url %>?_method=DELETE">
-  <button type="submit">Delete</button>
+  <button type="submit">
+    <i class="fa-solid fa-trash fa-lg"></i>
+  </button>
 </form>
