--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,11 +1,21 @@
 <header>
-  <nav>
+  <h1>
     <a href="/">Readerporium</a>
-    <ul>
-      <li><a href="/books">Books</a></li>
-      <li><a href="/books/new">Add Book</a></li>
-      <li><a href="/authors">Authors</a></li>
-      <li><a href="/authors/new">Add Authors</a></li>
-    </ul>
+  </h1>
+  <nav role="group">
+    <a href="/books" class="button">
+      <i class="fa-solid fa-book fa-lg"></i>
+    </a>
+    <a href="/books/new" class="button">
+      <i class="fa-solid fa-book fa-lg"></i>
+      <i class="fa-solid fa-plus fa-lg"></i>
+    </a>
+    <a href="/authors" class="button">
+      <i class="fa-solid fa-users fa-lg"></i>
+    </a>
+    <a href="/authors/new" class="button">
+      <i class="fa-solid fa-users fa-lg"></i>
+      <i class="fa-solid fa-plus fa-lg"></i>
+    </a>
   </nav>
 </header>
