--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,16 +6,11 @@
     <a href="/books" class="button">
       <i class="fa-solid fa-book fa-lg"></i>
     </a>
-    <a href="/books/new" class="button">
-      <i class="fa-solid fa-book fa-lg"></i>
-      <i class="fa-solid fa-plus fa-lg"></i>
-    </a>
     <a href="/authors" class="button">
       <i class="fa-solid fa-users fa-lg"></i>
     </a>
-    <a href="/authors/new" class="button">
-      <i class="fa-solid fa-users fa-lg"></i>
-      <i class="fa-solid fa-plus fa-lg"></i>
+    <a href="/logout" class="button">
+      <i class="fa-solid fa-arrow-right-from-bracket fa-lg"></i>
     </a>
   </nav>
 </header>
