--- a/views/books/new.ejs
+++ b/views/books/new.ejs
@@ -2,6 +2,8 @@
 
 <form action="/books" method="POST">
   <%- include('_form.ejs') %>
-  <a href="/books">Cancel</a>
-  <button type="submit">Create</button>
+  <div class="btn-group">
+    <a class="button" href="/books">Cancel</a>
+    <button type="submit">Create</button>
+  </div>
 </form>
