--- a/views/authors/_form.ejs
+++ b/views/authors/_form.ejs
@@ -1,2 +1,11 @@
 <label>Name</label>
-<input type="text" name="name" value="<%= author.name %>">
+<input type="text" name="name" value="<%= author.name %>" />
+<label>Access Level</label>
+<input
+  class="u-full-width"
+  type="number"
+  min="1"
+  max="4"
+  name="accessLevel"
+  value="<%= author.accessLevel %>"
+/>
