--- a/views/authors/index.ejs
+++ b/views/authors/index.ejs
@@ -1,33 +1,40 @@
 <h2>Search Authors</h2>
 
-<form action="/authors" method="GET">
-  <input type="text" name="name" value="<%= searchOptions.name %>" />
-  <button type="submit">
-    <i class="fa-solid fa-search fa-lg"></i>
-  </button>
-</form>
+<div class="row">
+  <div class="offset-by-three six columns">
+    <form action="/authors" method="GET">
+      <input class="u-full-width" type="text" name="name" value="<%= searchOptions.name %>" />
+      <div class="btn-group">
+        <button type="submit">
+        <i class="fa-solid fa-search fa-lg"></i>
+      </button>
+      </div>
+    </form>
+  </div>
+</div>
 
 <% authors.forEach(author => { %>
-  <div class="row">
-    <div class="one-half column">
-      <%= author.name %>
-    </div>
-    <div class="one-half column">
-      <div class="row">
-        <div class="four columns">
-          <a class="button" href="/authors/<%= author.id %>">
-            <i class="fa-solid fa-eye fa-lg"></i>
-          </a>
-        </div>
-        <div class="four columns">
-          <a class="button" href="/authors/<%= author.id %>/edit">
-            <i class="fa-solid fa-pen fa-lg"></i>
-          </a>
-        </div>
-        <div class="four columns">
-          <%- include('../partials/deleteForm', { url: `/authors/${author.id}` }) %> 
-        </div>
+<div class="row">
+  <div class="one-half column"><%= author.name %></div>
+  <div class="one-half column">
+    <div class="row">
+      <div class="four columns">
+        <a class="button" href="/authors/<%= author.id %>">
+          <i class="fa-solid fa-eye fa-lg"></i>
+        </a>
       </div>
+      <% if (user.role = "admin") { %>
+      <div class="four columns">
+        <a class="button" href="/authors/<%= author.id %>/edit">
+          <i class="fa-solid fa-pen fa-lg"></i>
+        </a>
+      </div>
+      <div class="four columns">
+        <%- include('../partials/deleteForm', { url: `/authors/${author.id}` })
+        %>
+      </div>
+      <% } %>
     </div>
   </div>
+</div>
 <% }) %>
