--- a/views/authors/new.ejs
+++ b/views/authors/new.ejs
@@ -1,7 +1,11 @@
 <h2>New Author</h2>
 
 <form action="/authors" method="POST">
-  <%- include('_form.ejs') %>
-  <a class="button" href="/authors">Cancel</a>
-  <button type="submit">Create</button>
+  <div class="row">
+    <div class="offset-by-one-third one-third column">
+      <%- include('_form.ejs') %>
+      <a class="button" href="/authors">Cancel</a>
+      <button type="submit">Create</button>
+    </div>
+  </div>
 </form>
