--- a/views/books/_form.ejs
+++ b/views/books/_form.ejs
@@ -1,41 +1,66 @@
 <div class="row">
   <div class="one-half column">
     <label>Title</label>
-    <input type="text" name="title" value="<%= book.title %>">
+    <input
+      class="u-full-width"
+      type="text"
+      name="title"
+      value="<%= book.title %>"
+    />
   </div>
   <div class="one-half column">
     <label>Author</label>
-    <select name="author">
-    <% authors.forEach(author => { %>
-      <% if (author.id === book.author) { %>
-        <option selected label="<%= author.name %>" value="<%= author.id %>">
-      <% } else { %>
-        <option label="<%= author.name %>" value="<%= author.id %>">
-      <% } %>
-    <% }) %>
+    <select name="author" class="u-full-width">
+      <% authors.forEach(author => { %> <% if (author.id === book.author) { %>
+      <option selected label="<%= author.name %>" value="<%= author.id %>">
+        <% } else { %>
+      </option>
+
+      <option label="<%= author.name %>" value="<%= author.id %>">
+        <% } %> <% }) %>
+      </option>
     </select>
   </div>
 </div>
 <div class="row">
-  <div class="one-half column">
+  <div class="one-third column">
     <label>Publish Date</label>
-    <input type="date" name="publishDate"
-          value="<%= book.publishDate == null ? '' : book.publishDate.toISOString().split('T')[0] %>">
+    <input
+      class="u-full-width"
+      type="date"
+      name="publishDate"
+      value="<%= book.publishDate == null ? '' : book.publishDate.toISOString().split('T')[0] %>"
+    />
   </div>
-  <div class="one-half column">
+  <div class="one-third column">
     <label>Word Count</label>
-    <input type="number" min=1 name="wordCount" value="<%= book.wordCount %>">
+    <input
+      class="u-full-width"
+      type="number"
+      min="1"
+      name="wordCount"
+      value="<%= book.wordCount %>"
+    />
+  </div>
+  <div class="one-third column">
+    <label>Access Level</label>
+    <input
+      class="u-full-width"
+      type="number"
+      min="1"
+      max="4"
+      name="accessLevel"
+      value="<%= book.accessLevel %>"
+    />
   </div>
 </div>
 <div class="row">
   <div class="one-half column">
-    <label>Access Level</label>
-    <input type="number" min=1 max=4 name="accessLevel" value="<%= book.accessLevel %>">
-  </div>
-  <div class="one-half column">
     <label>Cover</label>
-    <input type="file" name="cover" class="filepond">
+    <input type="file" name="cover" class="filepond" />
   </div>
 </div>
 <label>Description</label>
-<textarea class="u-full-width" name="description"><%= book.description %></textarea>
+<textarea class="u-full-width" name="description">
+<%= book.description %></textarea
+>
