--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,5 @@
-<h2>Recently Added</h2>
+<h2>Welcome <%= name %></h2>
+<h3>Recently Added</h3>
 <div>
   <% books.forEach(book => { %>
   <a class="cover" href="/books/<%= book.id %>">
