Add Series Route

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,6 +9,9 @@
     <a href="/authors" class="button">
       <i class="fa-solid fa-users fa-lg"></i>
     </a>
+    <a href="/series" class="button">
+      <i class="fa-solid fa-list-ol fa-lg"></i>
+    </a>
     <a href="/logout" class="button">
       <i class="fa-solid fa-arrow-right-from-bracket fa-lg"></i>
     </a>
